# Efficent-encoder-decoder

./: CMakeLists.txt  CONFIG.h  DSRC.cpp  DSRC.h  DSRC.hpp  Dockerfile  README.md  UnityCommunicationServer.cpp  enc  encoder  encoder.cpp  encoder.h  main  payloads.h  payloads.hpp  run.sh
encoder/: .gitignore  encoder.sln
encoder/encoder/: encoder.c  encoder.vcxproj  encoder.vcxproj.filters
encoder/encoder/x64/Debug/: encoder.exe.recipe  encoder.ilk  vc143.idb
encoder/encoder/x64/Debug/encoder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  encoder.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
encoder_decoder/: encoder_decoder.sln
encoder_decoder/encoder_decoder/: CONFIG.h  DSRC  DSRC.cpp  DSRC.h  UnityCommunicationServer.cpp  UnityCommunicationServer.hpp  encoder.cpp  encoder.hpp  encoder_decoder.vcxproj  encoder_decoder.vcxproj.filters  main  main2  payloads.h  payloads.hpp  payloads_backup.h  server
encoder_decoder/encoder_decoder/x64/Debug/: encoder.obj.enc  encoder_decoder.exe.recipe  encoder_decoder.ilk  vc143.idb
encoder_decoder/encoder_decoder/x64/Debug/encoder_decoder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  encoder_decoder.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/unity/: CMakeLists.txt  UnityCommunicationServer.cpp
src/: CMakeLists.txt  CMakeLists.txt_backup  encoder.cpp
src/compression/: lzw
src/include/: CONFIG.h  asciArt.hpp  encoder.hpp  payloads.hpp  someipconf.hpp
src/include/Collision_Prediction/: CMakeLists.txt  CarPrediction.cpp  Car_Prediction_Algo.cpp  Car_Prediction_Algo.hpp  Collision_Prediction.cpp  Collision_Prediction.hpp
src/include/DSRC/: CMakeLists.txt  DSRC.cpp
src/include/compression/: lzw.cpp
src/include/unity/: CMakeLists.txt  UnityCommunicationServer.cpp  UnityCommunicationServer.hpp
